--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"dependencies": {
 		"async": "^2.6.1",
 		"discord.js": "11.4.2"
+		"google-translate-api": "2.3.0"
 	},
 	"scripts": {
 		"start": "index.js"
