--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"dependencies": {
 		"async": "^2.6.1",
-		"discord.js": "11.4.2"
+		"discord.js": "11.4.2",
 		"google-translate-api": "2.3.0"
 	},
 	"scripts": {
