--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"async": "^2.6.1",
 		"discord.js": "11.4.2",
 		"google-translate-api": "2.3.0",
-		"replace-in-file": "3.4.2"
+		"replace-in-file": "3.4.2",
+		"ms": "2.1.1"
 	},
 	"scripts": {
 		"start": "node server.js"
