--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"pastebin-js": "0.5.1"
   },
 	"scripts": {
-		"start": "node server.js"
+		"start": "node index.js"
 	},
 	"devDependencies": {},
 	"repository": {
